@@ -120,6 +120,17 @@ void ChromeClientQt::unfocus()
     notImplemented();
 }
 
+bool ChromeClientQt::canTakeFocus(FocusDirection)
+{
+    notImplemented();
+    return true;
+}
+
+void ChromeClientQt::takeFocus(FocusDirection)
+{
+    notImplemented();
+}
+
 
 Page* ChromeClientQt::createWindow(const FrameLoadRequest&)
 {
