@@ -1,3 +1,15 @@
+2007-01-05  Lars Knoll <lars@trolltech.com>
+
+        Make the Qt build compile again
+
+        * WebCoreSupport/ChromeClientQt.cpp:
+        (WebCore::ChromeClientQt::canTakeFocus):
+        (WebCore::ChromeClientQt::takeFocus):
+        * WebCoreSupport/ChromeClientQt.h:
+        * WebCoreSupport/ContextMenuClientQt.cpp:
+        (WebCore::ContextMenuClientQt::getCustomMenuFromDefaultItems):
+        * WebCoreSupport/ContextMenuClientQt.h:
+
 2007-01-03  Lars Knoll <lars@trolltech.com>
 
         Fix the Qt build
